# s5ndt

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: lint.yml  publish.yml  test.yml
examples/dash/: mpl_export.py
src/mypackage/: __init__.py
src/s5ndt/: __init__.py  config_builder.py  dropdown.py  mpl_export.py  wizard.py
