[project]
name = "mypackage"
dynamic = ["version"]
description = "A short description of your package"
keywords = ["keyword1", "keyword2"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "MIT"
authors = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
maintainers = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/saemeon/mypackage"
Repository = "https://github.com/saemeon/mypackage"

[dependency-groups]
test = ["pytest", "pytest-cov"]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mike",
]
dev = [
    "ruff",
    "prek",
    "ty",
    { include-group = "test" },
    { include-group = "doc" },
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/mypackage/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
version = { attr = "mypackage._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypackage = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/mypackage --cov-report=term-missing"

[tool.ty.src]
include = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E203", "UP035"]
